Fix header overlapping content

--- a/src/pages/settings/addressbook/addressbook.scss
+++ b/src/pages/settings/addressbook/addressbook.scss
@@ -70,8 +70,9 @@ page-addressbook {
 ion-header {
   // background: linear-gradient(225deg, #f6f9fa 0%, #e6ebee 100%);
   background: transparent;
-  height: 64px;
-  padding: 20px 16px 0 16px;
+  // height: 64px;
+  // padding: 20px 16px 0 16px;
+  padding: 0 16px;
   .toolbar ion-title {
     margin-left: 34px;
     padding: 0;
